# game-engine

./: .editorconfig  .env.example  .gitignore  IMPLEMENTATION_PROGRESS.md  Makefile  Makefile.backup  PROTO_ANALYSIS_REPORT.md  PROTO_COMPLETE_STATUS.md  build-all-services.sh  build-go-services.sh  docker-compose.auth.yml  docker-compose.databases.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.yml  fix-all-services-comprehensive.sh  go.work  go.work.sum  k3s-deploy.sh  setup.sh
admin/: Dockerfile  (+3 more)
services/kyc-service/: Dockerfile  kyc-service.spec  pom.xml  pyproject.toml  requirements.txt
services/kyc-service/app/: config.py  database.py  grpc_server.py  grpc_verification.py  main.py
services/kyc-service/app/api/: document_routes.py  kyc_routes.py  limits_routes.py  review_routes.py  verification_routes.py
services/kyc-service/app/api/schemas/: kyc_schemas.py
services/kyc-service/app/models/: kyc.py
services/kyc-service/app/services/: kyc_audit_service.py  kyc_document_service.py  kyc_review_service.py  kyc_service.py  kyc_verification_service.py
services/kyc-service/app/tests/: test_kyc_service.py
services/kyc-service/migrations/: 001_init.sql
services/kyc-service/src/main/java/com/game_engine/kyc/: KycServiceApplication.java
services/kyc-service/src/main/java/com/game_engine/kyc/model/: KycVerification.java
services/kyc-service/src/main/java/com/game_engine/kyc/repository/: KycRepository.java
services/kyc-service/src/main/java/com/game_engine/kyc/service/: DocumentStorageService.java  KycLevelHelper.java  KycService.java
(+1738 files in other folders)
